@@ -2,6 +2,8 @@ Version 0.3.10+
 	* Add warning to milk/__init__.py if import fails
 	* Add return value to ``gridminimise``
 	* Set random seed in ``precluster_learner``
+	* Implemented Error-Correcting Output Codes for reduction of multi-class
+	to binary
 
 Version 0.3.10 2011-05-10 by luispedro
 	* Add ext.jugparallel
